# DialogDuoTTS

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  main.py  mypy.ini  pyproject.toml
data/: conversation.txt  project_podcast.txt
tests/: __init__.py  test_dialogue_to_speech.py
