[tool.poetry]
name = "DialogDuoTTS"
version = "0.1.0"
description = "A tool for converting text dialogues to speech using neural TTS"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pydub = "^0.25.1"
TTS = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
